# djangoPOC

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
poc/: settings.py  urls.py
poc_api/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
poc_api/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
