[tool.poetry]
name = "djangopoc"
version = "0.1.0"
description = ""
authors = ["Adarsh Gadekar <adarshgadekar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
django = "^4.2.10"  
djangorestframework = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
